encoding/jsonschema/testdata/txtar/strictkeywordswithref.txtar
#strictKeywords

Note: keywords alongside $ref are ignored until 2019-09

-- schema.json --
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "$id": "https://foo.example/bar",
  "$ref": "https://other.example"
}
-- out/decode/extract --
ERROR:
ignoring keyword "$id" alongside $ref:
    schema.json:3:3
-- out/decode-v3/extract --
ERROR:
ignoring keyword "$id" alongside $ref:
    schema.json:3:3
